--- a/manifest.yml
+++ b/manifest.yml
@@ -2,10 +2,10 @@
 applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
-  routes:
-  - route: pal-tracker-nikhil-raja.apps.evans.pal.pivotal.io
   services:
   - tracker-database
+  routes:
+  - route: pal-tracker-jimbo.apps.evans.pal.pivotal.io
   env:
     WELCOME_MESSAGE: Hello from the review environment
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
